--- a/src/components/WorkLeft/WorkLeft.css
+++ b/src/components/WorkLeft/WorkLeft.css
@@ -14,9 +14,24 @@
     color:#013237;
 }
 
-p{
+.WorkLeftText{
+    display:flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+pre{
     font-size: 20px;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
+    display:flex;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    gap: 10px 0px;
+    text-align: left;
+}
+
+a{
+    text-align: left;
 }
 
 .WorkButton{
